golden/error/runtime_assertion_failure.test
assert false, "This assertion should fail.";
0

# output:
Assertion failed: String("This assertion should fail.")
 --> stdin:1:7
  |
1 | assert false, "This assertion should fail.";
  |        ^~~~~
Error: Assertion failed.
